# anchor

tests/missing-signer-check/: Anchor.toml  exploit_run.out  package.json  tsconfig.json
tests/missing-signer-check/.ledger/: faucet-keypair.json
tests/missing-signer-check/migrations/: deploy.ts
tests/missing-signer-check/programs/missing-signer-check/: Cargo.toml
tests/missing-signer-check/programs/missing-signer-check/src/: lib.rs
tests/missing-signer-check/scripts/: run_exploit.ts
tests/missing-signer-check/tests/: exploit.ts
tests/unsafe-unchecked-account/: Anchor.toml  package.json
tests/unsafe-unchecked-account/.ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-HDBXWQiUBCGHk58dzeue32BLyNHh9o9rGXP7GhreVaBN.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
tests/unsafe-unchecked-account/.ledger/accounts/run/: 100.3
tests/unsafe-unchecked-account/.ledger/accounts/snapshot/100/: 0.2  12.1  88.0
tests/unsafe-unchecked-account/.ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1760807369458775  MANIFEST-000021
tests/unsafe-unchecked-account/.ledger/snapshot/100/: 100  status_cache
tests/unsafe-unchecked-account/programs/unsafe-unchecked-account/: Cargo.toml
tests/unsafe-unchecked-account/programs/unsafe-unchecked-account/src/: lib.rs
tests/unsafe-unchecked-account/scripts/: run.ts
tests/vuln-missing-discriminator/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
tests/vuln-missing-discriminator/programs/missing-discriminator/: Cargo.toml
tests/vuln-missing-discriminator/programs/missing-discriminator/src/: lib.rs
tests/vuln-missing-discriminator/tests/: missing-discriminator.ts
tests/vuln-remaining-accounts/: Anchor.toml  Cargo.toml  package-lock.json  package.json
tests/vuln-remaining-accounts/programs/unvalidated-remaining-accounts/: Cargo.toml
tests/vuln-remaining-accounts/programs/unvalidated-remaining-accounts/src/: lib.rs
tests/vuln-remaining-accounts/tests/: unvalidated-remaining.ts
tests/vuln-unchecked-admin/: Anchor.toml  Cargo.toml  package-lock.json  package.json
tests/vuln-unchecked-admin/programs/unsafe-unchecked-admin/: Cargo.toml
tests/vuln-unchecked-admin/programs/unsafe-unchecked-admin/src/: lib.rs
tests/vuln-unchecked-admin/tests/: unchecked-admin.ts
(+1 files in other folders)
