[package]
name = "missing-signer-check"
version = "0.1.0"
edition = "2021"
description = "Vulnerable program missing signer check"

[lib]
crate-type = ["cdylib", "lib"]
name = "missing_signer_check"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { path = "../../../../lang" }
