[package]
name = "missing-discriminator"
version = "0.1.0"
edition = "2021"
description = "Demonstrates missing discriminator enforcement via unchecked deserialization"

[lib]
crate-type = ["cdylib", "lib"]
name = "missing_discriminator"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { path = "../../../../lang" }
